welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: not found: value faireV
	faireV();
        ^PatternPicture:7: error: not found: value faireV
	faireV();
        ^PatternPicture:9: error: not found: value faireV
	faireV();
        ^PatternPicture:11: error: not found: value faireV
	faireV();
        ^